--- a/css/index.css
+++ b/css/index.css
@@ -139,7 +139,8 @@ body {
   color: #949494;
   text-align: center;
 }
-
+ #lang {
+ display: flex; }
 a{
   text-decoration: none;
   color: white;
