--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,13 @@
   font-weight: 600;
   font-style: normal;
 }
-
+@media only screen and (max-width: 768px) {
+  a,row {
+    width: 100%;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+}
 body {
   width: 100%;
   /* height:100%; */
@@ -102,8 +108,8 @@ body {
   margin-right: auto;
   display: flex;
   /* padding:10px; */
-  /* padding-top: 0.2rem; */
-  /* padding-bottom: 0.2rem; */
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
 	  /* padding-left:10%; */
 	  padding-right:10%;
   align-items: center;
