--- a/css/index.css
+++ b/css/index.css
@@ -108,8 +108,8 @@ body {
   margin-right: auto;
   display: flex;
   /* padding:10px; */
-  padding-top: 0.2rem;
-  padding-bottom: 0.2rem;
+  padding-top: 0.3rem;
+  padding-bottom: 0.3rem;
 	  /* padding-left:10%; */
 	  padding-right:10%;
   align-items: center;
@@ -130,7 +130,7 @@ body {
 
 #td {
   font-size: 1rem;
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 #nd {
   font-size: 0.55rem;
