--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,7 @@ body {
   /* height:100%; */
   font-family: BeVietnam;
   color: white;
-  background-image: linear-gradient(180deg,#333,#ccc);
+   background-image: linear-gradient(180deg,#E3F0D1,#E6BDC9);
 }
 
 #lang img{
