--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,7 @@ body {
   /* height:100%; */
   font-family: BeVietnam;
   color: white;
-   background-image: linear-gradient(180deg,#E3F0D1,#E6BDC9);
+   background-image: linear-gradient(87deg,#e3d1f0,#e5c1c7);
 }
 
 #lang img{
@@ -140,6 +140,7 @@ body {
   font-size: 1.6rem;
   font-weight: bold;
   align-items:center;
+  color: #ff34008c;
 }
 #mt {
   color: #d4ff00;
@@ -157,7 +158,7 @@ body {
  /* display: flex; } */
 a{
   text-decoration: none;
-  color: white;
+  color: #333;
   display: inline-block;
   width: 50%;
   /* padding-right:250; */
