--- a/main.css
+++ b/main.css
@@ -1858,7 +1858,7 @@
   }
 
   .container-2lgZY8::after {
-    content: "Stay comfy ❤";
+    content: "From Đạt đẹp trai quá chời quá đất ❤";
     position: fixed;
     top: 220px;
     bottom: 85px;
